force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_CMConfig__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__AgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated agreement</description>
    <inlineHelpText>ID of the associated agreement</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Price Rules</relationshipLabel>
    <relationshipName>AgreementPriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>