force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the account associated with the price rule</description>
    <inlineHelpText>ID of the account associated with the price rule</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreement Price Rules</relationshipLabel>
    <relationshipName>AgreementPriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>