force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActivatedDate__c</fullName>
    <description>The date the price rule was activated in the system</description>
    <inlineHelpText>The date the price rule was activated in the system</inlineHelpText>
    <label>Activated Date</label>
    <type>Date</type>
</CustomField>