force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentType__c</fullName>
    <description>The price adjustment type</description>
    <inlineHelpText>The price adjustment type</inlineHelpText>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>% Discount</fullName>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
            <value>
                <fullName>% Markup</fullName>
            </value>
            <value>
                <fullName>Markup Amount</fullName>
            </value>
            <value>
                <fullName>Price Override</fullName>
            </value>
            <value>
                <fullName>Price Factor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>