force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__AncestorId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AncestorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the ancestor price rule</description>
    <inlineHelpText>ID of the ancestor price rule</inlineHelpText>
    <label>Ancestor</label>
    <referenceTo>Apttus_Config2__AgreementPriceRule__c</referenceTo>
    <relationshipLabel>Derived Price Rules</relationshipLabel>
    <relationshipName>DerivedPriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>