force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__BundleProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BundleProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the bundle product associated with the option</description>
    <inlineHelpText>ID of the bundle product associated with the option</inlineHelpText>
    <label>Bundle Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Agreement Price Rules (Bundle Product)</relationshipLabel>
    <relationshipName>AgreementPriceRules2</relationshipName>
    <type>Lookup</type>
</CustomField>