force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__ContractNumberRef__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContractNumberRef__c</fullName>
    <description>The contract number associated with the price rule. The rule is associated with a contract number after activation.</description>
    <externalId>true</externalId>
    <inlineHelpText>The contract number associated with the price rule. The rule is associated with a contract number after activation.</inlineHelpText>
    <label>Contract Number Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>