force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__IsModifiable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsModifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prce rule is modifiable</description>
    <inlineHelpText>Indicates whether the prce rule is modifiable</inlineHelpText>
    <label>Is Modifiable</label>
    <type>Checkbox</type>
</CustomField>