force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__OrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the order associated with the price rule</description>
    <inlineHelpText>ID of the order associated with the price rule</inlineHelpText>
    <label>Order</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Agreement Price Rules</relationshipLabel>
    <relationshipName>AgreementPriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>