force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__PriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ID of the price list associated with the price rule</description>
    <inlineHelpText>ID of the price list associated with the price rule</inlineHelpText>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Agreement Price Rules</relationshipLabel>
    <relationshipName>AgreementPriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>