force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamily__c</fullName>
    <description>The product family associated with the price rule</description>
    <inlineHelpText>The product family associated with the price rule</inlineHelpText>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>