force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__ProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product group associated with the price rule</description>
    <inlineHelpText>ID of the product group associated with the price rule</inlineHelpText>
    <label>Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Agreement Price Rules</relationshipLabel>
    <relationshipName>AgreementPriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>