force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__ProductOptionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductOptionId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ID of the product option associated with the price rule</description>
    <inlineHelpText>ID of the product option associated with the price rule</inlineHelpText>
    <label>Product Option</label>
    <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
    <relationshipLabel>Agreement Price Rules</relationshipLabel>
    <relationshipName>AgreementPriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>