force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__RuleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RuleType__c</fullName>
    <description>The rule type</description>
    <inlineHelpText>The rule type</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
                <default>true</default>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>